--- a/resources/style.css
+++ b/resources/style.css
@@ -15,11 +15,17 @@ body {
     padding: 2rem 0rem;
 }
 
+/* Introduction Section */
+
 #home {
     margin-top: 10rem;
     line-height: 1.6;
     display: flex;
     padding: 0.5rem 2rem;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
 }
 
 #home h3 {
@@ -36,4 +42,17 @@ body {
 .home-info {
     margin-top: 10%;
 }
+
+.project-container {
+    text-align: center;
+    margin-top: 12rem;
+}
+
+.project-container h2 {
+    font-size: 1.8rem
+}
+
+
+
+
 
