finish project section

--- a/resources/style.css
+++ b/resources/style.css
@@ -45,12 +45,27 @@ body {
 
 .project-container {
     text-align: center;
-    margin-top: 12rem;
+    margin-top: 20rem;
 }
 
 .project-container h2 {
     font-size: 1.8rem
 }
+
+.project-showcase {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    padding: 100px 5px;
+}
+
+.project-template img {
+    background-color: white;
+    border-radius: 10px;
+    width: 80%;
+    position: relative;
+}
+
 
 
 
